@@ -45,6 +45,7 @@ All Issues:
   * [MESOS-7692] - Default environment variables defined in Docker image are not available in Mesos containerizer.
   * [MESOS-7703] - Mesos fails to exec a custom executor when no shell is used.
   * [MESOS-7770] - Persistent volume might not be mounted if there is a sandbox volume whose source is the same as the target of the persistent volume.
+  * [MESOS-7777] - Agent failed to recover due to mount namespace leakage in Docker 1.12/1.13.
 
 
 Release Notes - Mesos - Version 1.3.0
@@ -339,6 +340,7 @@ All Issues:
   * [MESOS-7690] - The agent can crash when an unknown executor tries to register.
   * [MESOS-7703] - Mesos fails to exec a custom executor when no shell is used.
   * [MESOS-7770] - Persistent volume might not be mounted if there is a sandbox volume whose source is the same as the target of the persistent volume.
+  * [MESOS-7777] - Agent failed to recover due to mount namespace leakage in Docker 1.12/1.13.
 
 
 Release Notes - Mesos - Version 1.2.1
@@ -836,6 +838,7 @@ All Issues:
   * [MESOS-7581] - Fix interference of external Boost installations when using some unbundled dependencies.
   * [MESOS-7703] - Mesos fails to exec a custom executor when no shell is used.
   * [MESOS-7770] - Persistent volume might not be mounted if there is a sandbox volume whose source is the same as the target of the persistent volume.
+  * [MESOS-7777] - Agent failed to recover due to mount namespace leakage in Docker 1.12/1.13.
 
 
 Release Notes - Mesos - Version 1.1.2
